Version 5.0.7
-------------

  features
   - Allows pasing NULL to 'afb_session_cookie_get'
   - Optimize dynamic verb allocation and search

Version 5.0.6
-------------

  fixes
   - unreferencing API for destroying it

Version 5.0.5
-------------

  fixes
   - data translation strinz -> json-c when NULL

Version 5.0.4
-------------

  fixes
   - interruption of call-sync

Version 5.0.3
-------------

  fixes
   - calling call-sync functions in timers
   - lock of event loop when posting jobs
   - length of abstract unix sockets

Version 5.0.2
-------------

  fixes
   - coherent callbacks for timers (now unsigned decount)

  minor/details
   - improved include order

Version 5.0.1
-------------

  features
   - implementation of afb_job_abort
   - added management of common session UUID
   - allows creation of events in pre-init state
   - implement service exiting and afb_ctlid_Exiting
   - reworked conversion of data:
      - stringz -> json_c : try to interpret json string first
      - json -> json_c : return an error if parse failed

  fixes
   - race in awaiting evmgr
   - afb_sched_mode behaviour

  minor/details
   - analysis tools improvements

Version 5.0.0
-------------

  features
   - relies on rp-libutils
   - integration of RPC WSAPI version 3
   - tuning of RPC version at build

  fixes
   - issue in includes
   - fix deadlock in querying cynagora

  minor/details
   - schedule the callback of cynagora permission
   - numeric error code to reply "disconnected"

Version 4.1.0
-------------

  features
   - depends of afb-binding >= 4.1.0
   - full rewrite of the scheduler
   - add a module to handle pool of threads
   - improved version of afb-extend interface (less requirement on json objects)
   - add function for dequeuing multiple jobs
   - add a wakeup time when preparing event loop
   - add functions to get verbs of api v4
   - implement get/set of userdata for requests v4
   - allows hooking of interface queries